--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "programandoconcabeza/env-management",
     "description": "management of env files",
     "type": "library",
+    "license": "GPL-2.0-or-later",
     "authors": [
         {
             "name": "programandoconcabeza",
