--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "autoload": {
         "psr-4": {
-            "Src\\": "src/"
+            "Src\\": "src/",
+            "Tests\\": "tests/"
         }
     },
     "autoload-dev": {
@@ -21,10 +22,10 @@
     },
     "minimum-stability": "dev",
     "require-dev": {
-        "phpunit/phpunit": "^9.6.3"
+        "phpunit/phpunit": "^9.6.3",
+        "ext-zip": "*"
     },
     "require": {
-        "php": ">=7.3",
-        "ext-zip": "*"
+        "php": ">=7.4"
     }
 }
