--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,10 @@
   ],
   "autoload": {
     "psr-4": {
-      "ProgramandoConCabeza\\": "src/",
-      "Tests\\": "tests/"
+      "ProgramandoConCabeza\\": "src/"
     }
   },
-  "autoload-dev": {
-    "psr-4": {
-      "Tests\\": "tests/"
-    }
-  },
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "require-dev": {
     "phpunit/phpunit": "^9.6.3"
   },
